infra/istio/istio-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT

#This configuration allows options to enforce mutual TLS instead of plain text
