infra/istio/istio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
  - http:
      paths:
      - path: /rentals
        pathType: Prefix
        backend:
          service:
            name: rentals
            port:
              number: 8010
      - path: /cars
        pathType: Prefix
        backend:
          service:
            name: cars
            port:
              number: 8011

#This configuration helps to enable clients from outside the cluster to access it
#The url - http://127.0.0.1/rentals/ or http://127.0.0.1/cars/
